# xsim-jit

./: .gitignore  .gitlab-ci.yml  README.md  feedback.txt
xsim1/: .main.c.swp  CMakeLists.txt  main.c
xsim2/: CMakeLists.txt  Makefile  benchmark.xas  benchmark_primes.xas  test.c
xsim2/assembler/: CMakeLists.txt  xcpudefs.h
xsim2/jit/: CMakeLists.txt  jit.c  jit.h  jit_register_map.c  jit_register_map.h  jit_runtime.c  jit_runtime.h  linker.c  linker.h  registers.h  vreg_table.c  vreg_table.h  x64_codegen.c  x64_codegen.h
xsim2/jit_test/: CMakeLists.txt  main.c
xsim2/linkedlist/: CMakeLists.txt  linkedlist.c
xsim2/xsim/: CMakeLists.txt  main.c  xcpu.c  xcpu.h  xmem.c  xmem.h
